--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "node src/server.js"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jquery": "^3.7.0",
     "winston": "^3.8.2"
   }
 }
