--- a/package.json
+++ b/package.json
@@ -7,19 +7,25 @@
   "scripts": {
     "start": "node src/server.js",
     "lint": "eslint \"src/**/*.js\"",
-    "lint:fix": "eslint \"src/**/*.js\" --fix"
+    "lint:fix": "eslint \"src/**/*.js\" --fix",
+    "migrate": "pg-migrations apply --directory migrations"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3",
-    "dotenv": "^16.0.3",
+    "@databases/pg-migrations": "^5.0.3",
+    "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "jquery": "^3.7.0",
-    "winston": "^3.8.2"
+    "jquery": "^3.7.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
+    "pg": "^8.11.3",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "eslint": "^8.41.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint": "^8.56.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-sonarjs": "^0.19.0"
   },
   "eslintConfig": {
