updated sample env and added initial migration file

--- a/sample.env
+++ b/sample.env
@@ -1,12 +1,12 @@
 # modify these as needed and rename file to .env
 PGHOST=localhost
 PGUSER=postgres
-PGDATABASE=people360
+PGDATABASE=test
 PGPASSWORD=password
 PGPORT=5432
 NODE_ENV=local
 PORT=3000
-DATABASE_URL=
+DATABASE_URL=postgresql://postgres:password@localhost:5432/test
 CA_CERT=
-KID=
-JWKS_URI=
+KID=ABCXYZ
+JWKS_URI=https://example.com/.well-known/jwks.json
