--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
